--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                 </a>
             </div>
 
-            <div class="header-nav"></div>
+            <div class="header-nav">
                 <a href="/" class="header-nav__link">Features</a>
                 <a href="/" class="header-nav__link">Partners</a>
                 <a href="/" class="header-nav__link">Stories</a>
-            <div class="header-btn"></div>
+            </div>
+            <div class="header-btn">
                 <a href="/" class="header-btn__link">Download for free</a>
+            </div>
         </header>
 
         <main class="main">
