--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>The Power of Simplicity</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/Apple.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
@@ -19,7 +22,7 @@
                     <img src="img/Logo.svg" alt="Apple">
                 </a>
             </div>
-
+            <input id="header-icon" type="checkbox">
             <div class="header-nav">
                 <a href="/" class="header-nav__link">Features</a>
                 <a href="/" class="header-nav__link">Partners</a>
@@ -28,6 +31,11 @@
             <div class="header-btn">
                 <a href="/" class="header-btn__link">Download for free</a>
             </div>
+
+            <label for="header-icon" class="header-menu">
+                <span class="material-symbols-outlined">menu</span>
+            </label>
+            
         </header>
 
         <main class="main">
